--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -10,6 +10,8 @@
       ["background-color", "color"],
       { "ignoreValues": ["transparent", "inherit", "initial"] }
     ],
+    "selector-class-pattern": "^[a-z][a-zA-Z0-9]+$",
+    "no-descending-specificity": null,
     "selector-class-pattern": "^[a-z][a-zA-Z0-9]+$"
   }
 }
