--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
+    "@types/react-table": "^7.7.12",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
     "recoil": "^0.7.3-alpha.2",
+    "victory": "^36.4.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
