--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
+    "classnames": "^2.3.1",
+    "date-fns": "^2.28.0",
     "react": "^18.1.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
@@ -42,6 +45,7 @@
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.34",
     "@types/react": "^18.0.9",
+    "@types/react-datepicker": "^4.4.1",
     "@types/react-dom": "^18.0.4",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
