--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
+    "classnames": "^2.3.1",
+    "jsx-runtime": "^1.2.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
