--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -63,6 +63,7 @@
     "react/react-in-jsx-scope": "off",
     "react/prop-types": "off",
 
-    "jsx-a11y/click-events-have-key-events": "off"
+    "jsx-a11y/click-events-have-key-events": "off",
+    "react/jsx-props-no-spreading": "off"
   }
 }
