--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -11,6 +11,7 @@
       { "ignoreValues": ["transparent", "inherit", "initial"] }
     ],
     "selector-class-pattern": "^[a-z][a-zA-Z0-9]+$",
-    "no-descending-specificity": null
+    "no-descending-specificity": null,
+    "scss/dollar-variable-empty-line-before": null
   }
 }
