--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -12,6 +12,11 @@
     ],
     "selector-class-pattern": "^[a-z][a-zA-Z0-9]+$",
     "no-descending-specificity": null,
-    "selector-class-pattern": "^[a-z][a-zA-Z0-9]+$"
+    "scss/dollar-variable-pattern": [
+      "^[A-Z0-9_]+$",
+      {
+        "ignore": "local"
+      }
+    ]
   }
 }
