--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -64,6 +64,7 @@
     "react/prop-types": "off",
 
     "jsx-a11y/click-events-have-key-events": "off",
-    "react/require-default-props": "off"
+    "react/require-default-props": "off",
+    "react/jsx-props-no-spreading": "off"
   }
 }
