--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "@types/react-table": "^7.7.12",
+    "classnames": "^2.3.1",
+    "jsx-runtime": "^1.2.0",
     "lodash": "^4.17.21",
     "react": "^18.1.0",
     "react-datepicker": "^4.8.0",
