--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
+    "@types/react-table": "^7.7.12",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
-    "@types/react-table": "^7.7.12",
     "lodash": "^4.17.21",
     "react": "^18.1.0",
     "react-datepicker": "^4.8.0",
@@ -39,6 +39,7 @@
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
     "recoil": "^0.7.3-alpha.2",
+    "store": "^2.0.12",
     "victory": "^36.4.0",
     "web-vitals": "^2.1.4"
   },
@@ -52,6 +53,7 @@
     "@types/react": "^18.0.9",
     "@types/react-datepicker": "^4.4.1",
     "@types/react-dom": "^18.0.4",
+    "@types/store": "^2.0.2",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "eslint": "^8.15.0",
